--- a/goldeneye/build.gradle
+++ b/goldeneye/build.gradle
@@ -11,8 +11,8 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
-    implementation "com.android.support:appcompat-v7:${versions.google}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.61"
+    implementation "com.android.support:appcompat-v7:28.0.0"
 }
 
 apply from: '../tasks.gradle'
